Bug 550362 - Too much recursion through nsSVGEffects::InvalidateRenderingObservers with nested textPath. r=roc