layout/svg/base/src/nsSVGTextFrame.cpp
@@ -412,4 +412,5 @@ nsSVGTextFrame::UpdateGlyphPositioning(PRBool aForceGlobalTransform)
     }
     firstFragment = fragment;
   }
+  nsSVGUtils::UpdateGraphic(this);
 }
